--- a/ToDoApp/ToDoApp.csproj
+++ b/ToDoApp/ToDoApp.csproj
@@ -62,12 +62,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HtmlWorker.cs" />
+    <Compile Include="HtmlDocument.cs" />
+    <Compile Include="MyCounter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task.cs" />
     <Compile Include="ToDoTasks.cs" />
-    <Compile Include="TxtWorker.cs" />
+    <Compile Include="TxtDocument.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
