--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -56,11 +56,11 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="HtmlWorkerUnitTest.cs" />
+    <Compile Include="HtmlDocumentUnitTest.cs" />
     <Compile Include="TaskUnitTest.cs" />
     <Compile Include="ToDoTasksUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TxtWorkerUnitTest.cs" />
+    <Compile Include="TxtDocumentUnitTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ToDoApp\ToDoApp.csproj">
