--- a/ToDoApp/ToDoApp.csproj
+++ b/ToDoApp/ToDoApp.csproj
@@ -54,6 +54,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -63,7 +64,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="HtmlDocument.cs" />
-    <Compile Include="MyCounter.cs" />
+    <Compile Include="ID.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Task.cs" />
