Refactor Main Program

--- a/UnitTest/UnitTest.csproj
+++ b/UnitTest/UnitTest.csproj
@@ -35,6 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CommandLine, Version=1.9.71.2, Culture=neutral, PublicKeyToken=de6f01bd326f8c32, processorArchitecture=MSIL">
+      <HintPath>..\packages\CommandLineParser.1.9.71\lib\net45\CommandLine.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Should, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Should.1.1.20\lib\Should.dll</HintPath>
       <Private>True</Private>
@@ -56,8 +60,10 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="CommandOptionsUnitTest.cs" />
     <Compile Include="HtmlDocumentUnitTest.cs" />
     <Compile Include="IDUnitTest.cs" />
+    <Compile Include="FilterUnitTest.cs" />
     <Compile Include="TaskUnitTest.cs" />
     <Compile Include="ToDoTasksUnitTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
