--- a/ToDoApp/ToDoApp.csproj
+++ b/ToDoApp/ToDoApp.csproj
@@ -63,10 +63,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommandOptions.cs" />
+    <Compile Include="ConsoleOutput.cs" />
     <Compile Include="HtmlDocument.cs" />
     <Compile Include="ID.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Filter.cs" />
     <Compile Include="Task.cs" />
     <Compile Include="ToDoTasks.cs" />
     <Compile Include="TxtDocument.cs" />
